--- a/src/client/web/components/ArticlePage/ArticlePage.css
+++ b/src/client/web/components/ArticlePage/ArticlePage.css
@@ -23,11 +23,21 @@
     display: block;
     font-size: 0.8rem;
     font-family: monospace;
-    text-align: right;
 }
 
 .ArticlePage .Internals .MattersOrigin {
     font-size: 1rem;
+}
+
+.ArticlePage .Internals {
+    display: block;
+    font-size: 0.8rem;
+    font-family: monospace;
+}
+
+.ArticlePage .ArticleDevInfo {
+    max-height: 20vh;
+    overflow: scroll;
 }
 
 .ArticlePage .CommentSection {
