--- a/src/client/web/components/NavBar/NavBar.css
+++ b/src/client/web/components/NavBar/NavBar.css
@@ -40,6 +40,7 @@
 .NavBar .SearchInput {
     max-width: 10rem;
     height: calc(var(--top-bar-height) - 8px);
+    margin-right: 0.5rem;
 }
 
 .NavBar .MenuContainer {
