--- a/src/client/web/components/HtmlRender/HtmlRender.css
+++ b/src/client/web/components/HtmlRender/HtmlRender.css
@@ -39,6 +39,24 @@
     align-items: center;
 }
 
+.HtmlRender .iframe-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: 50%;
+}
+
+.HtmlRender .iframe-container  iframe {
+    position: absolute;
+    top:      0;
+    left:     0;
+    bottom:   0;
+    right:    0;
+    width:    100%;
+    height:   100%
+}
+
+
 .HtmlRender img {
     max-width: 100%;
     max-height: 50vh;
