--- a/src/client/web/components/Podium/Podium.css
+++ b/src/client/web/components/Podium/Podium.css
@@ -23,3 +23,14 @@
         margin-bottom: 0.5rem;
     }
 }
+
+@media only screen and (max-width: 400px) {
+    .Podium .Chooser {
+        font-size: 1.4rem;
+    }
+
+    .Podium .CursorSettings {
+        font-size: 1.4rem;
+    }
+}
+
