--- a/src/client/web/WebRoot.css
+++ b/src/client/web/WebRoot.css
@@ -1,8 +1,10 @@
 body {
     font-size: 16px;
     font-family:
+            /* OS-specific */
+            "-apple-system",
             /* Latin */
-            "Avenir Next", "Segoe UI", "Helvetica Neue", Arial,
+            "Segoe UI", "Helvetica Neue", Arial,
             /* Han */
             "Hiragino Sans GB", "PingFang SC", "Heiti SC", "Microsoft YaHei UI", "Microsoft YaHei", "Source Han Sans",
             /* fallback */
